--- a/src/app/ui/forms/form/form-fields/form-fields.component.scss
+++ b/src/app/ui/forms/form/form-fields/form-fields.component.scss
@@ -8,9 +8,3 @@
   margin: 0;
   border: 0;
 }
-
-@media (min-width: styles.$bkp-tablet) {
-  .form-fields {
-    grid-template-columns: repeat(2, styles.$box-fr-base);
-  }
-}
